--- a/01 - Populate Campaign Finance.ipynb
+++ b/01 - Populate Campaign Finance.ipynb
@@ -2,25 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting psycopg2-binary\n",
+      "  Downloading psycopg2_binary-2.8.6-cp38-cp38-manylinux1_x86_64.whl (3.0 MB)\n",
+      "\u001b[K     |████████████████████████████████| 3.0 MB 3.0 MB/s eta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: psycopg2-binary\n",
+      "Successfully installed psycopg2-binary-2.8.6\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "pip install boto3"
+    "pip install psycopg2-binary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting unidecode\n",
+      "  Downloading Unidecode-1.2.0-py2.py3-none-any.whl (241 kB)\n",
+      "\u001b[K     |████████████████████████████████| 241 kB 2.2 MB/s eta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: unidecode\n",
+      "Successfully installed unidecode-1.2.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install unidecode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "import os\n",
     "import zipfile\n",
-    "import boto3\n",
     "\n",
-    "import dj_database_url\n",
     "import psycopg2\n",
     "import psycopg2.extras\n",
     "import unidecode\n",
@@ -30,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +109,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "directory = os.fsencode(\"./data/committee_doc_list\")\n",
@@ -98,6 +133,31 @@
     "print(\"Done.\")\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('fixing committee ids ...')\n",
+    "c.execute(\"update committee_doc_list \"\n",
+    "          \"set committee_name = split_part(committee_name, '[', 1), \"\n",
+    "          \" sboe_committee_id = substring(split_part(committee_name, '[', 2), 1, 16) \"\n",
+    "          )\n",
+    "print(\"Done.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\tset committee_name = split_part(committee_name, '[', 1),\n",
+    "\t\tsboe_committee_id = substring(split_part(committee_name, '[', 2), 1, 16)"
    ]
   },
   {
@@ -169,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +238,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating raw_table table...\n",
+      "Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('creating raw_table table...')\n",
+    "c.execute(\"CREATE TABLE raw_table \"\n",
+    "          \"(trans_id SERIAL PRIMARY KEY, \"\n",
+    "          \" name VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
+    "          \" street_line_1 VARCHAR(200) DEFAULT '' NOT NULL, street_line_2 VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
+    "          \" city VARCHAR(200) DEFAULT '' NOT NULL, state VARCHAR(15) DEFAULT '' NOT NULL, \"\n",
+    "          \" zip_code VARCHAR(11) DEFAULT '' NOT NULL, occupation VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
+    "          \" employer VARCHAR(200) DEFAULT '' NOT NULL, transaction_type VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
+    "          \" committee_name VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
+    "          \" committee_sboe_id VARCHAR(200) DEFAULT '' NOT NULL, committee_street_1 VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
+    "          \" committee_street_2 VARCHAR(200) DEFAULT '' NOT NULL, committee_city VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
+    "          \" committee_state VARCHAR(200) DEFAULT '' NOT NULL, committee_zip_code VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
+    "          \" report_name character varying(200) DEFAULT '' NOT NULL, date_occured VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
+    "          \" account_code VARCHAR(200) DEFAULT '' NOT NULL, amount VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
+    "          \" form_of_payment VARCHAR(200) DEFAULT '' NOT NULL, purpose VARCHAR(500) DEFAULT '' NOT NULL, \"\n",
+    "          \" candidate_referendum_name VARCHAR(200) DEFAULT '' NOT NULL, declaration VARCHAR(200) DEFAULT '' NOT NULL \"\n",
+    "          \" )\")\n",
+    "\n",
+    "print(\"Done.\")\n",
+    "conn.commit()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -187,14 +285,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'./data/raw_files/transinq_results_20170101_20170630.csv'\n"
+      "b'./data/raw_files/transinq_results-20100101-20101231.csv'\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-3-50c6f0113282>:6: DeprecationWarning: 'U' mode is deprecated\n",
+      "<ipython-input-9-50c6f0113282>:6: DeprecationWarning: 'U' mode is deprecated\n",
       "  with open(full_filename, 'rU') as csv_file:\n"
      ]
     },
@@ -202,13 +300,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'./data/raw_files/transinq_results_20170701_20171231.csv'\n",
-      "b'./data/raw_files/transinq_results_20180101_20180630.csv'\n",
-      "b'./data/raw_files/transinq_results_20180701_20181231.csv'\n",
-      "b'./data/raw_files/transinq_results_20190101_20190630.csv'\n",
-      "b'./data/raw_files/transinq_results_20190701_20191231.csv'\n",
-      "b'./data/raw_files/transinq_results_20200101_20200630.csv'\n",
-      "b'./data/raw_files/transinq_results_20200701_20201231.csv'\n",
+      "b'./data/raw_files/transinq_results-20120101-20121231.csv'\n",
+      "b'./data/raw_files/transinq_results_20110101_20111231.csv'\n",
+      "b'./data/raw_files/transinq_results_20130101_20131231.csv'\n",
+      "b'./data/raw_files/transinq_results_20140101_20141231.csv'\n",
+      "b'./data/raw_files/transinq_results_20150101_20151231.csv'\n",
+      "b'./data/raw_files/transinq_results_20160101_20161231.csv'\n",
       "Done.\n"
      ]
     }
@@ -246,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +365,7 @@
     "          \" city VARCHAR(200) DEFAULT '' NOT NULL, state VARCHAR(15) DEFAULT '' NOT NULL, \"\n",
     "          \" zip VARCHAR(11) DEFAULT '' NOT NULL, occupation VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
     "          \" employer VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
-    "          \" is_donor INT, is_vendor INT, is_person INT, is_organization INT, canon_account_id INT \"\n",
+    "          \" is_donor INT, is_vendor INT, is_person INT, is_organization INT \"\n",
     "          \" )\")\n",
     "print(\"table created, inserting records\")\n",
     "c.execute(\"INSERT INTO accounts \"\n",
@@ -287,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +471,7 @@
     "                \" transaction_type VARCHAR(200), date_occured DATE, amount FLOAT, \"\n",
     "                \" report_name VARCHAR(200), account_code VARCHAR(200), form_of_payment VARCHAR(200), \"\n",
     "                \" purpose VARCHAR(500), candidate_referendum_name VARCHAR(200), declaration VARCHAR(200), \"\n",
-    "                \"canon_account_id INT, canon_committee_sboe_id INT \"\n",
+    "                \"canon_account_id INT, canon_committee_sboe_id VARCHAR(200) \"\n",
     "                \")\")\n",
     "print(\"Done.\")\n",
     "conn.commit()"
@@ -382,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -451,14 +548,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "creating processed_donors...\n",
+      "creating processed_accounts...\n",
       "Done.\n"
      ]
     }
@@ -504,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
