--- a/01 - Populate Campaign Finance.ipynb
+++ b/01 - Populate Campaign Finance.ipynb
@@ -2,51 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting psycopg2-binary\n",
-      "  Downloading psycopg2_binary-2.8.6-cp38-cp38-manylinux1_x86_64.whl (3.0 MB)\n",
-      "\u001b[K     |████████████████████████████████| 3.0 MB 3.0 MB/s eta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: psycopg2-binary\n",
-      "Successfully installed psycopg2-binary-2.8.6\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install psycopg2-binary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting unidecode\n",
-      "  Downloading Unidecode-1.2.0-py2.py3-none-any.whl (241 kB)\n",
-      "\u001b[K     |████████████████████████████████| 241 kB 2.2 MB/s eta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: unidecode\n",
-      "Successfully installed unidecode-1.2.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install unidecode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,29 +212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating raw_table table...\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('creating raw_table table...')\n",
     "c.execute(\"CREATE TABLE raw_table \"\n",
     "          \"(trans_id SERIAL PRIMARY KEY, \"\n",
-    "          \" name VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
-    "          \" street_line_1 VARCHAR(200) DEFAULT '' NOT NULL, street_line_2 VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
-    "          \" city VARCHAR(200) DEFAULT '' NOT NULL, state VARCHAR(15) DEFAULT '' NOT NULL, \"\n",
-    "          \" zip_code VARCHAR(11) DEFAULT '' NOT NULL, occupation VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
-    "          \" employer VARCHAR(200) DEFAULT '' NOT NULL, transaction_type VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
-    "          \" committee_name VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
-    "          \" committee_sboe_id VARCHAR(200) DEFAULT '' NOT NULL, committee_street_1 VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
+    "          \" name VARCHAR(200) DEFAULT '', \"\n",
+    "          \" street_line_1 VARCHAR(200) DEFAULT '', street_line_2 VARCHAR(200) DEFAULT '', \"\n",
+    "          \" city VARCHAR(200) DEFAULT '' NOT NULL, state VARCHAR(15) DEFAULT '', \"\n",
+    "          \" zip_code VARCHAR(11) DEFAULT '', occupation VARCHAR(200) DEFAULT '', \"\n",
+    "          \" employer VARCHAR(200) DEFAULT '', transaction_type VARCHAR(200) DEFAULT '', \"\n",
+    "          \" transaction_category VARCHAR(10) DEFAULT '', committee_name VARCHAR(200) DEFAULT '', \"\n",
+    "          \" committee_sboe_id VARCHAR(200) DEFAULT '' NOT NULL, committee_street_1 VARCHAR(200) DEFAULT '', \"\n",
     "          \" committee_street_2 VARCHAR(200) DEFAULT '' NOT NULL, committee_city VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
     "          \" committee_state VARCHAR(200) DEFAULT '' NOT NULL, committee_zip_code VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
     "          \" report_name character varying(200) DEFAULT '' NOT NULL, date_occured VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
@@ -276,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -285,14 +250,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'./data/raw_files/transinq_results-20100101-20101231.csv'\n"
+      "b'./data/raw_files/contributions/contributions_20100101-20101231.csv'\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-9-50c6f0113282>:6: DeprecationWarning: 'U' mode is deprecated\n",
+      "<ipython-input-27-38694ef18832>:6: DeprecationWarning: 'U' mode is deprecated\n",
       "  with open(full_filename, 'rU') as csv_file:\n"
      ]
     },
@@ -300,18 +265,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'./data/raw_files/transinq_results-20120101-20121231.csv'\n",
-      "b'./data/raw_files/transinq_results_20110101_20111231.csv'\n",
-      "b'./data/raw_files/transinq_results_20130101_20131231.csv'\n",
-      "b'./data/raw_files/transinq_results_20140101_20141231.csv'\n",
-      "b'./data/raw_files/transinq_results_20150101_20151231.csv'\n",
-      "b'./data/raw_files/transinq_results_20160101_20161231.csv'\n",
+      "b'./data/raw_files/contributions/contributions_20110101-20111231.csv'\n",
+      "b'./data/raw_files/contributions/contributions_20120101-20121231.csv'\n",
+      "b'./data/raw_files/contributions/contributions_20130101-20131231.csv'\n",
+      "b'./data/raw_files/contributions/contributions_20140101-20141231.csv'\n",
+      "b'./data/raw_files/contributions/contributions_20150101-20151231.csv'\n",
+      "b'./data/raw_files/contributions/contributions_20160101-20161231.csv'\n",
+      "b'./data/raw_files/contributions/contributions_20170101-20171231.csv'\n",
+      "b'./data/raw_files/contributions/contributions_20180101-20181231.csv'\n",
+      "b'./data/raw_files/contributions/contributions_20190101-20191231.csv'\n",
+      "b'./data/raw_files/contributions/contributions_20200101_20200630.csv'\n",
+      "b'./data/raw_files/contributions/contributions_20200701_20201231.csv'\n",
       "Done.\n"
      ]
     }
    ],
    "source": [
-    "directory = os.fsencode(\"./data/raw_files\")\n",
+    "directory = os.fsencode(\"./data/raw_files/contributions\")\n",
     "    \n",
     "for filename in os.listdir(directory):\n",
     "    full_filename = os.path.join(directory, filename)\n",
@@ -319,7 +289,7 @@
     "    with open(full_filename, 'rU') as csv_file: \n",
     "        c.copy_expert(\"COPY raw_table \" \n",
     "                      \"(name, street_line_1, street_line_2, city, state, \" \n",
-    "                      \" zip_code, occupation, employer, transction_type, \" \n",
+    "                      \" zip_code, occupation, employer, transaction_type, \" \n",
     "                      \" committee_name, committee_sboe_id, committee_street_1, \" \n",
     "                      \" committee_street_2, committee_city, committee_state, \" \n",
     "                      \"committee_zip_code, report_name, date_occured, account_code, \" \n",
@@ -333,6 +303,129 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fixing transaction categories ...\n",
+      "Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('fixing transaction categories ...')\n",
+    "c.execute(\"update raw_table \"\n",
+    "          \"set transaction_category = 'C' \"\n",
+    "          )\n",
+    "print(\"Done.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'./data/raw_files/expenses/expenses_20100101_20101231.csv'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-30-e2173d9807b1>:6: DeprecationWarning: 'U' mode is deprecated\n",
+      "  with open(full_filename, 'rU') as csv_file:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'./data/raw_files/expenses/expenses_20110101_20111231.csv'\n",
+      "b'./data/raw_files/expenses/expenses_20120101_20121231.csv'\n",
+      "b'./data/raw_files/expenses/expenses_20130101_20131231.csv'\n",
+      "b'./data/raw_files/expenses/expenses_20140101_20141231.csv'\n",
+      "b'./data/raw_files/expenses/expenses_20150101_20151231.csv'\n",
+      "b'./data/raw_files/expenses/expenses_20160101_20161231.csv'\n",
+      "b'./data/raw_files/expenses/expenses_20170101_20171231.csv'\n",
+      "b'./data/raw_files/expenses/expenses_20180101_20181231.csv'\n",
+      "b'./data/raw_files/expenses/expenses_20190101_20191231.csv'\n",
+      "b'./data/raw_files/expenses/expenses_20200101_20201231.csv'\n",
+      "Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "directory = os.fsencode(\"./data/raw_files/expenses\")\n",
+    "    \n",
+    "for filename in os.listdir(directory):\n",
+    "    full_filename = os.path.join(directory, filename)\n",
+    "    print(full_filename)\n",
+    "    with open(full_filename, 'rU') as csv_file: \n",
+    "        c.copy_expert(\"COPY raw_table \" \n",
+    "                      \"(name, street_line_1, street_line_2, city, state, \" \n",
+    "                      \" zip_code, occupation, employer, transaction_type, \" \n",
+    "                      \" committee_name, committee_sboe_id, committee_street_1, \" \n",
+    "                      \" committee_street_2, committee_city, committee_state, \" \n",
+    "                      \"committee_zip_code, report_name, date_occured, account_code, \" \n",
+    "                      \" amount, form_of_payment, purpose, candidate_referendum_name,\" \n",
+    "                      \" declaration) \" \n",
+    "                      \"FROM STDIN CSV HEADER\", csv_file)\n",
+    "\n",
+    "    conn.commit()\n",
+    "\n",
+    "print(\"Done.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fixing transaction categories ...\n",
+      "Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('fixing transaction categories ...')\n",
+    "c.execute(\"update raw_table \"\n",
+    "          \"set transaction_category = 'E' \"\n",
+    "          \" WHERE transaction_category <> 'C' \"\n",
+    "          )\n",
+    "print(\"Done.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.commit()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -343,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +561,7 @@
     "print('creating transactions table...')\n",
     "c.execute(\"CREATE TABLE transactions \"\n",
     "                \"(transaction_id INT, original_committee_sboe_id VARCHAR(200), original_account_id INT,  \"\n",
-    "                \" transaction_type VARCHAR(200), date_occured DATE, amount FLOAT, \"\n",
+    "                \" transaction_type VARCHAR(200), transaction_category VARCHAR(10), date_occured DATE, amount FLOAT, \"\n",
     "                \" report_name VARCHAR(200), account_code VARCHAR(200), form_of_payment VARCHAR(200), \"\n",
     "                \" purpose VARCHAR(500), candidate_referendum_name VARCHAR(200), declaration VARCHAR(200), \"\n",
     "                \"canon_account_id INT, canon_committee_sboe_id VARCHAR(200) \"\n",
@@ -479,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -495,12 +588,13 @@
     "print(\"Inserting transaction records\")\n",
     "c.execute(\"INSERT INTO transactions \"\n",
     "          \"(transaction_id, original_committee_sboe_id, original_account_id, \"\n",
-    "          \" transaction_type, date_occured, amount, report_name, account_code, \"\n",
+    "          \" transaction_type, transaction_category, date_occured, amount, report_name, account_code, \"\n",
     "          \" form_of_payment, purpose, candidate_referendum_name, declaration)\"\n",
     "          \"SELECT trans_id, \"\n",
     "          \"COALESCE(UPPER(TRIM(committee_sboe_id)), ''), \"\n",
     "          \"accounts.account_id, \"\n",
-    "          \"COALESCE(UPPER(TRIM(transction_type)), ''), \"\n",
+    "          \"COALESCE(UPPER(TRIM(transaction_type)), ''), \"\n",
+    "          \"COALESCE(UPPER(TRIM(transaction_category)), ''), \"\n",
     "          \"TO_DATE(TRIM(date_occured), 'MM/DD/YYYY'), \"\n",
     "          \"CAST(amount as DOUBLE PRECISION), \"\n",
     "          \"COALESCE(UPPER(TRIM(report_name)), ''), \"\n",
@@ -524,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -633,141 +727,6 @@
     "c.execute(\"CREATE INDEX processed_committee_idx ON processed_committees (comm_id)\")\n",
     "print(\"Done.\")\n",
     "conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## **Transaction Views**\n",
-    "### Needs to be done after Dedupe Process"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conn = psycopg2.connect(database=\"camp-fin\",\n",
-    "                        user=\"postgres\",\n",
-    "                       password=\"\",\n",
-    "                        host=\"172.16.238.13\",\n",
-    "                        port=\"5432\")\n",
-    "c = conn.cursor()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Creating Contributions View\")\n",
-    "c.execute(\"CREATE VIEW contributions AS \"\n",
-    "          \"(SELECT transactions.transaction_id AS trans_id, \"\n",
-    "          \" transactions.original_committee_sboe_id AS original_receiver_id, \"\n",
-    "          \" transactions.original_account_id AS original_source_id, \"\n",
-    "          \" transactions.transaction_type, \"\n",
-    "          \" 'C' AS transaction_category, \"\n",
-    "          \" transactions.date_occured, \"\n",
-    "          \" transactions.amount, \"\n",
-    "          \" transactions.report_name, \"\n",
-    "          \" transactions.account_code, \"\n",
-    "          \" transactions.form_of_payment, \"\n",
-    "          \" transactions.purpose, \"\n",
-    "          \" transactions.candidate_referendum_name AS candidate_refereendum_name, \"\n",
-    "          \" transactions.declaration, \"\n",
-    "          \" transactions.canon_account_id AS canon_source_id, \"\n",
-    "          \" transactions.canon_committee_sboe_id AS canon_receiver_id \"\n",
-    "          \"FROM transactions \"\n",
-    "          \" WHERE transactions.transaction_type IN ('CONTRIB TO REIMBURSE', 'DONATION', 'FORGIVEN LOAN', \"\n",
-    "          \" 'GENERAL', 'INDIVIDUAL', 'INTEREST', 'LOAN', \"\n",
-    "          \" 'OUTSIDE SOURCE', 'OUTSTANDING LOAN', 'NON-PARTY COMM', 'NONPROFIT', 'PARTY COMM'))\")     \n",
-    "conn.commit()\n",
-    "print(\"Done.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Creating Expenses View\")\n",
-    "c.execute(\"CREATE VIEW expenses AS \"\n",
-    "          \"SELECT transactions.transaction_id AS trans_id, \"\n",
-    "          \" transactions.original_committee_sboe_id AS orginal_source_id, \"\n",
-    "          \" transactions.original_account_id AS original_receiver_id, \"\n",
-    "          \" transactions.transaction_type, \"\n",
-    "          \" 'E' AS transaction_category, \"\n",
-    "          \" transactions.date_occured, \"\n",
-    "          \" transactions.amount, \"\n",
-    "          \" transactions.report_name, \"\n",
-    "          \" transactions.account_code, \"\n",
-    "          \" transactions.form_of_payment, \"\n",
-    "          \" transactions.purpose, \"\n",
-    "          \" transactions.candidate_referendum_name AS candidate_refereendum_name, \"\n",
-    "          \" transactions.declaration, \"\n",
-    "          \" transactions.canon_committee_sboe_id AS canon_source_id, \"\n",
-    "          \" transactions.canon_account_id AS canon_receiver_id \"\n",
-    "          \"FROM transactions \"\n",
-    "          \"WHERE transactions.transaction_type IN ('CONT TO OTHER COMM', 'COORD PARTY EXP', 'DEBT PAYMENT', \"\n",
-    "          \" 'INDEPENDENT EXP', 'LOAN REPAYMENT', 'NONMONETARY GIFT', 'OPERATING EXP', \"\n",
-    "          \" 'REFUND')\")\n",
-    "conn.commit()\n",
-    "print(\"Done.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c.execute(\"CREATE TABLE processed_committees AS \"\n",
-    "          \"(SELECT comm_id, \"\n",
-    "          \" CASE WHEN (name = '') \"\n",
-    "          \"      THEN NULL \"\n",
-    "          \"      ELSE LOWER(CONCAT_WS(' ', name)) \"\n",
-    "          \" END AS name, \"  \n",
-    "           \" CASE WHEN (address_1 = '' AND address_2 = '') \"\n",
-    "          \"      THEN NULL \"\n",
-    "          \"      ELSE LOWER(CONCAT_WS(' ', address_1, address_2)) \"\n",
-    "          \" END AS address, \" \n",
-    "          \" LOWER(city) AS city, \"\n",
-    "          \" LOWER(state) AS state, \"\n",
-    "          \" LOWER(zip) AS zip \"\n",
-    "          \" FROM committees)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c.close()\n",
-    "conn.close()\n",
-    "print('Done.')"
    ]
   },
   {
