--- a/03 - Post Dedupe.ipynb
+++ b/03 - Post Dedupe.ipynb
@@ -9,21 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting dj_database_url\n",
-      "  Downloading dj_database_url-0.5.0-py2.py3-none-any.whl (5.5 kB)\n",
-      "Installing collected packages: dj-database-url\n",
-      "Successfully installed dj-database-url-0.5.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install dj_database_url"
    ]
@@ -117,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +193,7 @@
     "          \" transactions.original_committee_sboe_id AS original_receiver_id, \"\n",
     "          \" transactions.original_account_id AS original_source_id, \"\n",
     "          \" transactions.transaction_type, \"\n",
-    "          \" 'C' AS transaction_category, \"\n",
+    "          \" transactions.transaction_category, \"\n",
     "          \" transactions.date_occured, \"\n",
     "          \" transactions.amount, \"\n",
     "          \" transactions.report_name, \"\n",
@@ -217,16 +205,15 @@
     "          \" transactions.canon_account_id AS canon_source_id, \"\n",
     "          \" transactions.canon_committee_sboe_id AS canon_receiver_id \"\n",
     "          \"FROM transactions \"\n",
-    "          \" WHERE transactions.transaction_type IN ('CONTRIB TO REIMBURSE', 'DONATION', 'FORGIVEN LOAN', \"\n",
-    "          \" 'GENERAL', 'INDIVIDUAL', 'INTEREST', 'LOAN', \"\n",
-    "          \" 'OUTSIDE SOURCE', 'OUTSTANDING LOAN', 'NON-PARTY COMM', 'NONPROFIT', 'PARTY COMM'))\")     \n",
+    "          \" WHERE transactions.transaction_category = 'C' \"\n",
+    "          \")\")     \n",
     "conn.commit()\n",
     "print(\"Done.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +232,7 @@
     "          \" transactions.original_committee_sboe_id AS orginal_source_id, \"\n",
     "          \" transactions.original_account_id AS original_receiver_id, \"\n",
     "          \" transactions.transaction_type, \"\n",
-    "          \" 'E' AS transaction_category, \"\n",
+    "          \" transactions.transaction_category, \"\n",
     "          \" transactions.date_occured, \"\n",
     "          \" transactions.amount, \"\n",
     "          \" transactions.report_name, \"\n",
@@ -257,16 +244,14 @@
     "          \" transactions.canon_committee_sboe_id AS canon_source_id, \"\n",
     "          \" transactions.canon_account_id AS canon_receiver_id \"\n",
     "          \"FROM transactions \"\n",
-    "          \"WHERE transactions.transaction_type IN ('CONT TO OTHER COMM', 'COORD PARTY EXP', 'DEBT PAYMENT', \"\n",
-    "          \" 'INDEPENDENT EXP', 'LOAN REPAYMENT', 'NONMONETARY GIFT', 'OPERATING EXP', \"\n",
-    "          \" 'REFUND')\")\n",
+    "          \"WHERE transactions.transaction_category = 'E' \")  \n",
     "conn.commit()\n",
     "print(\"Done.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -389,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -418,22 +403,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-15-a7ba23360611>:6: DeprecationWarning: 'U' mode is deprecated\n",
+      "  with open(full_filename, 'rU') as csv_file:\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Done.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-25-a7ba23360611>:6: DeprecationWarning: 'U' mode is deprecated\n",
-      "  with open(full_filename, 'rU') as csv_file:\n"
      ]
     }
    ],
@@ -457,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +489,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-27-6fe8d033cc89>:6: DeprecationWarning: 'U' mode is deprecated\n",
+      "<ipython-input-17-6fe8d033cc89>:6: DeprecationWarning: 'U' mode is deprecated\n",
       "  with open(full_filename, 'rU') as csv_file:\n"
      ]
     },
@@ -550,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +631,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-38-f1662de3e382>:6: DeprecationWarning: 'U' mode is deprecated\n",
+      "<ipython-input-21-f1662de3e382>:6: DeprecationWarning: 'U' mode is deprecated\n",
       "  with open(full_filename, 'rU') as csv_file:\n"
      ]
     }
@@ -738,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -884,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -959,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -986,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
